Add jekyll-redirect-from plugin

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ plugins:
   - jekyll_custom_permalink
   - jekyll-environment-variables
   - jekyll-feed
+  - jekyll-redirect-from
   - jekyll-sitemap
 
 # Defaults
