Update config description

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Eric Stein
 name: Eric Stein
 email: steinea@protonmail.com
 description: >-
-  hCard and Verify pages for Eric Stein.
+  Identity
 url: https://steinea.fyi
 bluesky_username: steinea.bsky.social
 github_username: steinea
